{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 2299,
  "lineage": "a303f85f-0818-b7f9-7b66-f5af816577b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3cd00e475c00aa6",
            "association_id": "eipassoc-0ceb4b2f0ed83ebec",
            "domain": "vpc",
            "id": "eipalloc-0c3cd00e475c00aa6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cac11c9e2202456f",
            "private_dns": "ip-10-255-0-222.ec2.internal",
            "private_ip": "10.255.0.222",
            "public_dns": "ec2-3-230-99-226.compute-1.amazonaws.com",
            "public_ip": "3.230.99.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Microservice-nat-eip"
            },
            "tags_all": {
              "Name": "Microservice-nat-eip",
              "project": "Microservice"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consul_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:321863202336:instance/i-0807dd0944b9fd63e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Microservice-instance-profile-20221112145105320500000006",
            "id": "i-0807dd0944b9fd63e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CICD",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de780bc66484e6c9",
            "private_dns": "ip-10-255-3-250.ec2.internal",
            "private_ip": "10.255.3.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b00328f12063879b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbeb83d0ff5ba713",
            "tags": {
              "Name": "Microservice-consul-server"
            },
            "tags_all": {
              "Name": "Microservice-consul-server",
              "project": "Microservice"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099249b9de6500d0a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:321863202336:instance/i-0380db629bf089434",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Microservice-instance-profile-20221112145105320500000006",
            "id": "i-0380db629bf089434",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CICD",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb6eab49ec344915",
            "private_dns": "ip-10-255-4-250.ec2.internal",
            "private_ip": "10.255.4.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb2280567ad81e59",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e5b7eb6345ca38d",
            "tags": {
              "Name": "Microservice-consul-server"
            },
            "tags_all": {
              "Name": "Microservice-consul-server",
              "project": "Microservice"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099249b9de6500d0a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:321863202336:instance/i-0285987aae057376d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Microservice-instance-profile-20221112145105320500000006",
            "id": "i-0285987aae057376d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CICD",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9949f2785ef6050",
            "private_dns": "ip-10-255-5-250.ec2.internal",
            "private_ip": "10.255.5.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ca9a53ef299742d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a44d86f13a3ea809",
            "tags": {
              "Name": "Microservice-consul-server"
            },
            "tags_all": {
              "Name": "Microservice-consul-server",
              "project": "Microservice"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099249b9de6500d0a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:321863202336:instance/i-09ff60169b7cb4f73",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ff60169b7cb4f73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "CICD",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a3e6aac62781660",
            "private_dns": "ip-10-255-3-253.ec2.internal",
            "private_ip": "10.255.3.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a969369dca673556",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbeb83d0ff5ba713",
            "tags": {
              "Name": "Microservice-database"
            },
            "tags_all": {
              "Name": "Microservice-database",
              "project": "Microservice"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac3f4150d01861c6"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_security_group.database",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_ssm_parameter.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:internet-gateway/igw-02e31bad3fada8627",
            "id": "igw-02e31bad3fada8627",
            "owner_id": "321863202336",
            "tags": {
              "Name": "Microservice-internet-gateway"
            },
            "tags_all": {
              "Name": "Microservice-internet-gateway",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221112145139043100000012/6611607ecfabab80",
            "arn_suffix": "app/cl-20221112145139043100000012/6611607ecfabab80",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cl-20221112145139043100000012-481935381.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221112145139043100000012/6611607ecfabab80",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "cl-20221112145139043100000012",
            "name_prefix": "cl-",
            "security_groups": [
              "sg-0fabe5ddb4777f433"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032653db81b4fe346"
              },
              {
                "subnet_id": "subnet-055366b6983931828"
              },
              {
                "subnet_id": "subnet-081e3f95d78a7ed93"
              }
            ],
            "subnets": [
              "subnet-032653db81b4fe346",
              "subnet-055366b6983931828",
              "subnet-081e3f95d78a7ed93"
            ],
            "tags": {
              "Name": "Microservice-client-lb"
            },
            "tags_all": {
              "Name": "Microservice-client-lb",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "consul_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cs-20221112145139048000000013/fc743d82c220317b",
            "arn_suffix": "app/cs-20221112145139048000000013/fc743d82c220317b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cs-20221112145139048000000013-593535364.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cs-20221112145139048000000013/fc743d82c220317b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "cs-20221112145139048000000013",
            "name_prefix": "cs-",
            "security_groups": [
              "sg-0b0c486662f6fb5da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032653db81b4fe346"
              },
              {
                "subnet_id": "subnet-055366b6983931828"
              },
              {
                "subnet_id": "subnet-081e3f95d78a7ed93"
              }
            ],
            "subnets": [
              "subnet-032653db81b4fe346",
              "subnet-055366b6983931828",
              "subnet-081e3f95d78a7ed93"
            ],
            "tags": {
              "Name": "Microservice-consul-server-lb"
            },
            "tags_all": {
              "Name": "Microservice-consul-server-lb",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.consul_server_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cl-20221112145139043100000012/6611607ecfabab80/189f7b0b42b7f072",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-2022111214512679060000000a/d352953b31c7a8ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cl-20221112145139043100000012/6611607ecfabab80/189f7b0b42b7f072",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221112145139043100000012/6611607ecfabab80",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.client_lb",
            "aws_lb_target_group.client_lb_targets",
            "aws_security_group.client_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "consul_server_lb_http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cs-20221112145139048000000013/fc743d82c220317b/385c5f9d48582782",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cs-20221112145139048000000013/fc743d82c220317b/385c5f9d48582782",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cs-20221112145139048000000013/fc743d82c220317b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.consul_server_lb",
            "aws_lb_target_group.consul_server_lb_targets",
            "aws_security_group.consul_server_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "client_lb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-2022111214512679060000000a/d352953b31c7a8ab",
            "arn_suffix": "targetgroup/cl-2022111214512679060000000a/d352953b31c7a8ab",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-2022111214512679060000000a/d352953b31c7a8ab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cl-2022111214512679060000000a",
            "name_prefix": "cl-",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Microservice-client-tg"
            },
            "tags_all": {
              "Name": "Microservice-client-tg",
              "project": "Microservice"
            },
            "target_type": "ip",
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "consul_server_lb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "arn_suffix": "targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/v1/status/leader",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cs-2022111214512791260000000e",
            "name_prefix": "cs-",
            "port": 8500,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Microservice-consul-server-tg"
            },
            "tags_all": {
              "Name": "Microservice-consul-server-tg",
              "project": "Microservice"
            },
            "target_type": "instance",
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "consul_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00-20221112145414395200000014",
            "port": 8500,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "target_id": "i-0807dd0944b9fd63e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_instance.consul_server",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.consul_server_lb_targets",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00-20221112145414501200000016",
            "port": 8500,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "target_id": "i-0380db629bf089434"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_instance.consul_server",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.consul_server_lb_targets",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00-20221112145414433600000015",
            "port": 8500,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cs-2022111214512791260000000e/fb2379dad4cf7a00",
            "target_id": "i-0285987aae057376d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.consul_instance_profile",
            "aws_iam_role.consul_instance",
            "aws_instance.consul_server",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.consul_server_lb_targets",
            "aws_nat_gateway.nat",
            "aws_security_group.consul_server",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_iam_policy_document.instance_trust_policy",
            "data.aws_ssm_parameter.ubuntu_latest",
            "random_id.consul_gossip_key",
            "random_uuid.consul_bootstrap_token",
            "tls_cert_request.consul_server_cert",
            "tls_locally_signed_cert.consul_server_signed_cert",
            "tls_private_key.ca_key",
            "tls_private_key.consul_server_key",
            "tls_self_signed_cert.ca_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3cd00e475c00aa6",
            "connectivity_type": "public",
            "id": "nat-0fbe94c17bfbed37f",
            "network_interface_id": "eni-0cac11c9e2202456f",
            "private_ip": "10.255.0.222",
            "public_ip": "3.230.99.226",
            "subnet_id": "subnet-055366b6983931828",
            "tags": {
              "Name": "Microservice-nat"
            },
            "tags_all": {
              "Name": "Microservice-nat",
              "project": "Microservice"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e31bad3fada8627",
            "id": "r-rtb-09b8250aad3904e8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b8250aad3904e8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b9d05ff180e871821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fbe94c17bfbed37f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9d05ff180e87182",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:route-table/rtb-0b9d05ff180e87182",
            "id": "rtb-0b9d05ff180e87182",
            "owner_id": "321863202336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fbe94c17bfbed37f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Microservice-private-route-table"
            },
            "tags_all": {
              "Name": "Microservice-private-route-table",
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:route-table/rtb-09b8250aad3904e8b",
            "id": "rtb-09b8250aad3904e8b",
            "owner_id": "321863202336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e31bad3fada8627",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Microservice-public-route-table"
            },
            "tags_all": {
              "Name": "Microservice-public-route-table",
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a1bde51b6437e56",
            "route_table_id": "rtb-0b9d05ff180e87182",
            "subnet_id": "subnet-0bbeb83d0ff5ba713"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a526ba8ba6e0d403",
            "route_table_id": "rtb-0b9d05ff180e87182",
            "subnet_id": "subnet-04e5b7eb6345ca38d"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa2f0002b3804185",
            "route_table_id": "rtb-0b9d05ff180e87182",
            "subnet_id": "subnet-0a44d86f13a3ea809"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b714e13f174410d",
            "route_table_id": "rtb-09b8250aad3904e8b",
            "subnet_id": "subnet-055366b6983931828"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a5176ba680f100",
            "route_table_id": "rtb-09b8250aad3904e8b",
            "subnet_id": "subnet-032653db81b4fe346"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481c5bbc1166eb07",
            "route_table_id": "rtb-09b8250aad3904e8b",
            "subnet_id": "subnet-081e3f95d78a7ed93"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acl_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0857dbcfcc05bae7b",
            "description": "Consul ACL Controller service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0857dbcfcc05bae7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-acl-controller-2022111214512759420000000c",
            "name_prefix": "Microservice-acl-controller-",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0fabe5ddb4777f433",
            "description": "security group for client service application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fabe5ddb4777f433",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic on port 80.",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Microservice-ecs-client-lb20221112145128813400000010",
            "name_prefix": "Microservice-ecs-client-lb",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-01a0d8ba570778729",
            "description": "General security group for consul clients.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a0d8ba570778729",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow LAN Serf traffic from resources with this security group.",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "Allow Proxy traffic from resources with this security group.",
                "from_port": 20000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 20000
              }
            ],
            "name": "Microservice-consul-client-2022111214512680840000000b",
            "name_prefix": "Microservice-consul-client-",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-099249b9de6500d0a",
            "description": "Security group for Consul servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099249b9de6500d0a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP API traffic from Consul Client to Server.",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a0d8ba570778729"
                ],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from Load Balancer to the Consul Server API.",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c486662f6fb5da"
                ],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS API traffic from Consul Client to Server.",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a0d8ba570778729"
                ],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS API traffic from Consul Server to Server.",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8501
              },
              {
                "cidr_blocks": [],
                "description": "Allow LAN gossip between consul servers for cluster membership, distributed health checks of agents",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "Allow LAN gossip traffic from Consul Client to Server.  For data replication between servers.",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a0d8ba570778729"
                ],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "Allow RPC traffic between consul servers for data replication",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8300
              },
              {
                "cidr_blocks": [],
                "description": "Allow RPC traffic from Consul Client to Server.  For data replication between servers.",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a0d8ba570778729"
                ],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [],
                "description": "Allow WAN gossip traffic between consul servers for data replication accross data centers",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              }
            ],
            "name": "Microservice-consul-server20221112145126789400000009",
            "name_prefix": "Microservice-consul-server",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0b0c486662f6fb5da",
            "description": "Security Group for the consul server lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0c486662f6fb5da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.255.0.0/20"
                ],
                "description": "Allow HTTP traffic.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Microservice-consul-server-lb20221112145126783800000007",
            "name_prefix": "Microservice-consul-server-lb",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0ac3f4150d01861c6",
            "description": "Database security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac3f4150d01861c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the fruits service.",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef2f09f17783f2e"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the vegetables service.",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c252702870e44a7a"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Microservice-database20221112145128983000000011",
            "name_prefix": "Microservice-database",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_client_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0cffc3728a1b93aa4",
            "description": "ECS Client service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cffc3728a1b93aa4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the client LB to the service container port.",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fabe5ddb4777f433"
                ],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-ecs-client-service2022111214512770810000000d",
            "name_prefix": "Microservice-ecs-client-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_fruits_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0c252702870e44a7a",
            "description": "ECS fruits service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c252702870e44a7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-ecs-fruits-service20221112145126788500000008",
            "name_prefix": "Microservice-ecs-fruits-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_vegetables_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-00ef2f09f17783f2e",
            "description": "ECS vegetables service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ef2f09f17783f2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-ecs-vegetables-service2022111214512878890000000f",
            "name_prefix": "Microservice-ecs-vegetables-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice"
            },
            "timeouts": null,
            "vpc_id": "vpc-063729d25a525321f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "acl_controller_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-2941312375",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0857dbcfcc05bae7b",
            "self": true,
            "source_security_group_id": "sg-0857dbcfcc05bae7b",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.acl_controller",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "acl_controller_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-933820879",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0857dbcfcc05bae7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.acl_controller",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3443499029",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fabe5ddb4777f433",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "client_lb_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic on port 80.",
            "from_port": 80,
            "id": "sgrule-2375374687",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fabe5ddb4777f433",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3083625026",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_client_allow_inbound_self_20000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow Proxy traffic from resources with this security group.",
            "from_port": 20000,
            "id": "sgrule-2676440499",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01a0d8ba570778729",
            "self": true,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 20000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_client_allow_inbound_self_8301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow LAN Serf traffic from resources with this security group.",
            "from_port": 8301,
            "id": "sgrule-1557817536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01a0d8ba570778729",
            "self": true,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 8301,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_client_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-1182992585",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a0d8ba570778729",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_8300",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow RPC traffic between consul servers for data replication",
            "from_port": 8300,
            "id": "sgrule-3963256537",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": true,
            "source_security_group_id": "sg-099249b9de6500d0a",
            "to_port": 8300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_8301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow LAN gossip between consul servers for cluster membership, distributed health checks of agents",
            "from_port": 8301,
            "id": "sgrule-2438806253",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": true,
            "source_security_group_id": "sg-099249b9de6500d0a",
            "to_port": 8301,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_8302",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow WAN gossip traffic between consul servers for data replication accross data centers",
            "from_port": 8302,
            "id": "sgrule-385152689",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": true,
            "source_security_group_id": "sg-099249b9de6500d0a",
            "to_port": 8302,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_client_8300",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow RPC traffic from Consul Client to Server.  For data replication between servers.",
            "from_port": 8300,
            "id": "sgrule-1378024202",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 8300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_client_8301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow LAN gossip traffic from Consul Client to Server.  For data replication between servers.",
            "from_port": 8301,
            "id": "sgrule-793100094",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 8301,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_client_8500",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP API traffic from Consul Client to Server.",
            "from_port": 8500,
            "id": "sgrule-2162936735",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_client_8501",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTPS API traffic from Consul Client to Server.",
            "from_port": 8501,
            "id": "sgrule-4253847467",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": "sg-01a0d8ba570778729",
            "to_port": 8501,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_client",
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_lb_8500",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP traffic from Load Balancer to the Consul Server API.",
            "from_port": 8500,
            "id": "sgrule-2981976876",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": false,
            "source_security_group_id": "sg-0b0c486662f6fb5da",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_security_group.consul_server_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_allow_server_8501",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTPS API traffic from Consul Server to Server.",
            "from_port": 8501,
            "id": "sgrule-1133775480",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099249b9de6500d0a",
            "self": true,
            "source_security_group_id": "sg-099249b9de6500d0a",
            "to_port": 8501,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_lb_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "10.255.0.0/20"
            ],
            "description": "Allow HTTP traffic.",
            "from_port": 80,
            "id": "sgrule-2802038608",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b0c486662f6fb5da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_server_lb_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-2327963212",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b0c486662f6fb5da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consul_server_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_fruits_27017",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the vegetables service.",
            "from_port": 27017,
            "id": "sgrule-4219356278",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ac3f4150d01861c6",
            "self": false,
            "source_security_group_id": "sg-0c252702870e44a7a",
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-14325756",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ac3f4150d01861c6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_vegetables_27017",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the fruits service.",
            "from_port": 27017,
            "id": "sgrule-3383887608",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ac3f4150d01861c6",
            "self": false,
            "source_security_group_id": "sg-00ef2f09f17783f2e",
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_9090",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the client LB to the service container port.",
            "from_port": 9090,
            "id": "sgrule-3231231828",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cffc3728a1b93aa4",
            "self": false,
            "source_security_group_id": "sg-0fabe5ddb4777f433",
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-1634877007",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cffc3728a1b93aa4",
            "self": true,
            "source_security_group_id": "sg-0cffc3728a1b93aa4",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3737654634",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cffc3728a1b93aa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fruits_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-1707754456",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c252702870e44a7a",
            "self": true,
            "source_security_group_id": "sg-0c252702870e44a7a",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fruits_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3566595688",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c252702870e44a7a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_vegetables_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-1943082985",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00ef2f09f17783f2e",
            "self": true,
            "source_security_group_id": "sg-00ef2f09f17783f2e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_vegetables_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-1273585268",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00ef2f09f17783f2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-0bbeb83d0ff5ba713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbeb83d0ff5ba713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Microservice-private-us-east-1a",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-04e5b7eb6345ca38d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e5b7eb6345ca38d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Microservice-private-us-east-1b",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-0a44d86f13a3ea809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.255.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44d86f13a3ea809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-private-us-east-1c"
            },
            "tags_all": {
              "Name": "Microservice-private-us-east-1c",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-055366b6983931828",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055366b6983931828",
            "ipv6_cidr_block": "2600:1f18:2305:b800::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0cf7c78149adee108",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Microservice-public-us-east-1a",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-032653db81b4fe346",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032653db81b4fe346",
            "ipv6_cidr_block": "2600:1f18:2305:b801::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-016801297ec6f67a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-public-us-east-1b"
            },
            "tags_all": {
              "Name": "Microservice-public-us-east-1b",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-081e3f95d78a7ed93",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.255.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e3f95d78a7ed93",
            "ipv6_cidr_block": "2600:1f18:2305:b802::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d7b6414d3e180ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-public-us-east-1c"
            },
            "tags_all": {
              "Name": "Microservice-public-us-east-1c",
              "project": "Microservice"
            },
            "vpc_id": "vpc-063729d25a525321f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:vpc/vpc-063729d25a525321f",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-0258cd3fe8b76be48",
            "default_route_table_id": "rtb-0f80132cf9d34749f",
            "default_security_group_id": "sg-094c4ecf6e4b84d10",
            "dhcp_options_id": "dopt-00fc5823eccd70426",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-063729d25a525321f",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-072d1df9b61e63f19",
            "ipv6_cidr_block": "2600:1f18:2305:b800::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f80132cf9d34749f",
            "owner_id": "321863202336",
            "tags": {
              "Name": "Microservice-vpc"
            },
            "tags_all": {
              "Name": "Microservice-vpc",
              "project": "Microservice"
            }
          }
        }
      ]
    }
  ]
}